@@ -41,7 +41,7 @@
         "name": "Andrea Sessa",
         "email": "andrea.sessa@gmail.com"
     }],
-    "version": "1.9.2-5",
+    "version": "1.9.2-6",
     "homepage": "http://www.totaljs.com",
     "bugs": {
         "url": "https://github.com/totaljs/framework/issues",
