@@ -10,6 +10,8 @@ BETA ======= 1.9.2 (HOTFIX)
 - fixed: F.worker()
 - fixed: WebSocket event handlers
 - fixed: sync2()
+- fixed: @{place}
+- fixed: @{section}
 
 - improve: routing performance with F.onAuthorization()
 
